<?xml version="1.0"?>
   <package>
      <name>beginner_tutorials</name>
      <version>0.1.0</version>
      <description>The beginner_tutorials package</description>
    
      <maintainer email="you@yourdomain.tld">Your Name</maintainer>
      <license>BSD</license>
      <url type="website">http://wiki.ros.org/beginner_tutorials</url>
     <author email="you@yourdomain.tld">Jane Doe</author>
   
     <buildtool_depend>catkin</buildtool_depend>
   
     <build_depend>roscpp</build_depend>
     <build_depend>rospy</build_depend>
     <build_depend>std_msgs</build_depend>
     <build_depend>message_generation</build_depend>
     
     <run_depend>message_runtime</run_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>rospy</run_depend>
     <run_depend>std_msgs</run_depend>
   
   </package>
